versions/kruise-agents-sandbox-manager/0.1.0/README.md
# Agent Sandbox Manager v0.1.0

## Configuration Parameters

The following table lists the configurable parameters of the agents-sandbox-manager chart and their default values.

| Parameter                                             | Description                                                      | Default                                                                                                                                                      |
|-------------------------------------------------------|------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `sandboxManager.replicaCount`                         | Number of sandbox-manager replicas                               | `2`                                                                                                                                                          |
| `sandboxManager.controller.repository`                | sandbox-manager controller image repository                      | `openkruise/sandbox-manager`                                                                                                                                 |
| `sandboxManager.controller.tag`                       | sandbox-manager controller image tag                             | `v0.1.0`                                                                                                                                                     |
| `sandboxManager.controller.pullPolicy`                | Controller container image pull policy                           | `IfNotPresent`                                                                                                                                               |
| `sandboxManager.controller.logLevel`                  | Controller log level                                             | `3`                                                                                                                                                          |
| `sandboxManager.controller.infra`                     | Sandbox manager infrastructure type                              | `sandbox-cr`                                                                                                                                                 |
| `sandboxManager.controller.hostNetwork`               | Whether controller uses host network                             | `false`                                                                                                                                                      |
| `sandboxManager.controller.maxClaimWorkers`           | Maximum claim worker threads                                     | `100`                                                                                                                                                        |
| `sandboxManager.controller.maxCreateQPS`              | Maximum QPS for creating sandboxes                               | `200`                                                                                                                                                        |
| `sandboxManager.controller.extProcMaxConcurrency`     | Maximum concurrency for external processors                      | `3000`                                                                                                                                                       |
| `sandboxManager.controller.resources.limits.cpu`      | Controller container CPU resource limit                          | `2`                                                                                                                                                          |
| `sandboxManager.controller.resources.limits.memory`   | Controller container memory resource limit                       | `4Gi`                                                                                                                                                        |
| `sandboxManager.controller.resources.requests.cpu`    | Controller container CPU resource request                        | `2`                                                                                                                                                          |
| `sandboxManager.controller.resources.requests.memory` | Controller container memory resource request                     | `4Gi`                                                                                                                                                        |
| `sandboxManager.proxy.repository`                     | Envoy proxy image repository                                     | `envoyproxy/envoy`                                                                                                                                           |
| `sandboxManager.proxy.tag`                            | Envoy proxy image tag                                            | `v1.33-latest`                                                                                                                                               |
| `sandboxManager.proxy.pullPolicy`                     | Envoy proxy container image pull policy                          | `IfNotPresent`                                                                                                                                               |
| `sandboxManager.proxy.resources.cpu`                  | Envoy proxy container CPU resources                              | `2`                                                                                                                                                          |
| `sandboxManager.proxy.resources.memory`               | Envoy proxy container memory resources                           | `4Gi`                                                                                                                                                        |
| `sandboxManager.e2b.domain`                           | E2B protocol domain                                              | `your.domain.com`                                                                                                                                            |
| `sandboxManager.e2b.enableAuth`                       | Whether to enable E2B authentication                             | `true`                                                                                                                                                       |
| `sandboxManager.e2b.adminApiKey`                      | E2B admin API key                                                | `admin-987654321`                                                                                                                                            |
| `sandboxManager.e2b.maxTimeout`                       | E2B maximum timeout (seconds)                                    | `2592000`                                                                                                                                                    |
| `sandboxManager.service.type`                         | sandbox-manager service type                                     | `ClusterIP`                                                                                                                                                  |
| `sandboxManager.service.port`                         | Envoy proxy service port                                         | `7788`                                                                                                                                                       |
| `sandboxManager.ingress.className`                    | Ingress class name                                               | `nginx`                                                                                                                                                      |
| `sandboxManager.ingress.annotations`                  | Ingress annotations                                              | `{}`                                                                                                                                                         |
| `sandboxManager.ingress.certSecretName`               | Ingress TLS certificate Secret name                              | `sandbox-manager-tls`                                                                                                                                        |
| `imagePullSecrets`                                    | Image pull secrets list                                          | `{}`                                                                                                                                                         |
| `nameOverride`                                        | Override Chart name                                              | `""`                                                                                                                                                         |
| `fullnameOverride`                                    | Override full name                                               | `""`                                                                                                                                                         |
| `serviceAccount.automount`                            | Whether to automount ServiceAccount Token                        | `true`                                                                                                                                                       |
| `serviceAccount.annotations`                          | ServiceAccount annotations                                       | `{}`                                                                                                                                                         |
| `serviceAccount.name`                                 | ServiceAccount name to use                                       | `""`                                                                                                                                                         |
| `podAnnotations`                                      | Pod annotations                                                  | `{}`                                                                                                                                                         |
| `podLabels`                                           | Pod labels                                                       | `{}`                                                                                                                                                         |
| `podSecurityContext`                                  | Pod security context                                             | `{fsGroup: 2000, allowPrivilegeEscalation: false, seccompProfile: {type: RuntimeDefault}}`                                                                   |
| `securityContext`                                     | Container security context                                       | `{capabilities: {drop: [ALL], add: [NET_BIND_SERVICE]}, readOnlyRootFilesystem: true, allowPrivilegeEscalation: false, runAsNonRoot: true, runAsUser: 65532}` |
| `nodeSelector`                                        | Node selector for Pod scheduling                                 | `{}`                                                                                                                                                         |
| `tolerations`                                         | Tolerations for Pod scheduling                                   | `[]`                                                                                                                                                         |
| `affinity`                                            | Affinity for Pod scheduling                                      | Preferred Pod anti-affinity                                                                                                                                  |

Specify each parameter using the `--set key=value[,key=value]` argument. For example:

```bash
helm install agents-sandbox-manager . -n <namespace> openkruise/kruise-agents-sandbox-manager --set key=value...
```
