versions/kruise-agents-sandbox-manager/0.6.0-alpha2/README.md
# Agent Sandbox Manager v0.6.0-alpha2

## Configuration Parameters

The following table lists the configurable parameters of the agents-sandbox-manager chart and their default values.

| Parameter                                    | Description                                   | Default                                                                                                                                                       |
|----------------------------------------------|-----------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `replicaCount`                               | Number of sandbox-manager replicas            | `2`                                                                                                                                                           |
| `controller.repository`                      | sandbox-manager controller image repository   | `openkruise/sandbox-manager`                                                                                                                                  |
| `controller.tag`                             | sandbox-manager controller image tag          | `v0.6.0-alpha2`                                                                                                                                               |
| `controller.pullPolicy`                      | Controller container image pull policy        | `IfNotPresent`                                                                                                                                                |
| `controller.logLevel`                        | Controller log level                          | `5`                                                                                                                                                           |
| `controller.infra`                           | Sandbox manager infrastructure type           | `sandbox-cr`                                                                                                                                                  |
| `controller.hostNetwork`                     | Whether controller uses host network          | `false`                                                                                                                                                       |
| `controller.maxClaimWorkers`                 | Maximum claim worker threads                  | `100`                                                                                                                                                         |
| `controller.maxCreateQPS`                    | Maximum QPS for creating sandboxes            | `200`                                                                                                                                                         |
| `controller.extProcMaxConcurrency`           | Maximum concurrency for external processors   | `3000`                                                                                                                                                        |
| `controller.createPodInsteadOfSandbox`       | Whether to create Pod instead of Sandbox      | `false`                                                                                                                                                       |
| `controller.resources.cpu`                   | Controller container CPU resource             | `2`                                                                                                                                                           |
| `controller.resources.memory`                | Controller container memory resource          | `4Gi`                                                                                                                                                         |
| `proxy.repository`                           | Envoy proxy image repository                  | `envoyproxy/envoy`                                                                                                                                            |
| `proxy.tag`                                  | Envoy proxy image tag                         | `v1.33-latest`                                                                                                                                                |
| `proxy.pullPolicy`                           | Envoy proxy container image pull policy       | `IfNotPresent`                                                                                                                                                |
| `e2b.domain`                                 | E2B protocol domain                           | `"your.domain.com"`                                                                                                                                           |
| `e2b.enableAuth`                             | Whether to enable E2B authentication          | `true`                                                                                                                                                        |
| `e2b.adminApiKey`                            | E2B admin API key (required)                  | `""`                                                                                                                                                          |
| `e2b.maxTimeout`                             | E2B maximum timeout (seconds)                 | `2592000`                                                                                                                                                     |
| `service.type`                               | sandbox-manager service type                  | `ClusterIP`                                                                                                                                                   |
| `service.port`                               | Envoy proxy service port                      | `7788`                                                                                                                                                        |
| `ingress.className`                          | Ingress class name (required)                 | `""`                                                                                                                                                          |
| `ingress.annotations`                        | Ingress annotations                           | `{}`                                                                                                                                                          |
| `ingress.certSecretName`                     | Ingress TLS certificate Secret name           | `sandbox-manager-tls`                                                                                                                                         |
| `ingress.dataplaneService`                   | Dataplane backend service name for Ingress    | `sandbox-manager`                                                                                                                                             |
| `imagePullSecrets`                           | Image pull secrets list                       | `{}`                                                                                                                                                          |
| `nameOverride`                               | Override Chart name                           | `""`                                                                                                                                                          |
| `fullnameOverride`                           | Override full name                            | `""`                                                                                                                                                          |
| `serviceAccount.automount`                   | Whether to automount ServiceAccount Token     | `true`                                                                                                                                                        |
| `serviceAccount.annotations`                 | ServiceAccount annotations                    | `{}`                                                                                                                                                          |
| `serviceAccount.name`                        | ServiceAccount name to use                    | `""`                                                                                                                                                          |
| `podAnnotations`                             | Pod annotations                               | `{}`                                                                                                                                                          |
| `podLabels`                                  | Pod labels                                    | `{}`                                                                                                                                                          |
| `podSecurityContext`                         | Pod security context                          | `{fsGroup: 2000, seccompProfile: {type: RuntimeDefault}}`                                                                                                     |
| `podSecurityContextAllowPrivilegeEscalation` | Pod security context allowPrivilegeEscalation | `false`                                                                                                                                                       |
| `securityContext`                            | Container security context                    | `{capabilities: {drop: [ALL], add: [NET_BIND_SERVICE]}, readOnlyRootFilesystem: true, allowPrivilegeEscalation: false, runAsNonRoot: true, runAsUser: 65532}` |
| `nodeSelector`                               | Node selector for Pod scheduling              | `{}`                                                                                                                                                          |
| `tolerations`                                | Tolerations for Pod scheduling                | `[]`                                                                                                                                                          |
| `affinity`                                   | Affinity for Pod scheduling                   | Preferred Pod anti-affinity                                                                                                                                   |
| `gateway.replicaCount`                       | Number of sandbox-gateway replicas            | `2`                                                                                                                                                           |
| `gateway.image.repository`                   | sandbox-gateway image repository              | `openkruise/sandbox-gateway`                                                                                                                                  |
| `gateway.image.tag`                          | sandbox-gateway image tag                     | `v0.6.0-alpha2`                                                                                                                                               |
| `gateway.image.pullPolicy`                   | sandbox-gateway image pull policy             | `IfNotPresent`                                                                                                                                                |
| `gateway.resources.cpu`                      | sandbox-gateway container CPU resources       | `2`                                                                                                                                                           |
| `gateway.resources.memory`                   | sandbox-gateway container memory resources    | `4Gi`                                                                                                                                                         |
| `gateway.initContainer.enabled`              | Whether to enable gateway initContainer       | `false`                                                                                                                                                       |
| `gateway.initContainer.image.repository`     | initContainer image repository                | `busybox`                                                                                                                                                     |
| `gateway.initContainer.image.tag`            | initContainer image tag                       | `1.36.1`                                                                                                                                                      |
| `gateway.service.type`                       | sandbox-gateway service type                  | `ClusterIP`                                                                                                                                                   |
| `gateway.service.port`                       | sandbox-gateway service port                  | `7788`                                                                                                                                                        |
| `gateway.service.targetPort`                 | sandbox-gateway service target port           | `10000`                                                                                                                                                       |
| `gateway.envoy.admin.address`                | Envoy admin interface address                 | `127.0.0.1`                                                                                                                                                   |
| `gateway.envoy.admin.port`                   | Envoy admin interface port                    | `9901`                                                                                                                                                        |
| `gateway.envoy.listener.address`             | Envoy listener address                        | `0.0.0.0`                                                                                                                                                     |
| `gateway.envoy.listener.port`                | Envoy listener port                           | `10000`                                                                                                                                                       |
| `gateway.envoy.logLevel`                     | Envoy log level                               | `warn`                                                                                                                                                        |
| `gateway.envoy.concurrency`                  | Envoy worker thread concurrency               | `4`                                                                                                                                                           |
| `agentio.enabled`                            | Deploy the embedded Agentio control plane     | `false`                                                                                                                                                       |
| `agentio.global.hub`                         | Default registry for Agentio images           | `docker.io/openkruise`                                                                                                                                        |
| `agentio.global.trustDomain`                 | Agentio workload identity trust domain        | `cluster.local`                                                                                                                                               |
| `agentio.global.clusterId`                   | Agentio cluster identifier                    | `Kubernetes`                                                                                                                                                  |
| `agentio.global.caCertConfigMap`             | CA ConfigMap distributed to traffic proxies   | `agentio-ca-certs`                                                                                                                                            |
| `agentio.agentiod.replicas`                  | Agentio control-plane replicas                | `1`                                                                                                                                                           |
| `agentio.agentiod.image`                     | Agentio control-plane image settings          | `docker.io/openkruise/pilot:0.1.0`                                                                                                                            |
| `agentio.agentiod.resources`                 | Agentio control-plane resources               | `requests/limits: 4 CPU, 4Gi`                                                                                                                                 |
| `agentio.trafficExtension.enabled`           | Deploy the optional traffic extension         | `false`                                                                                                                                                       |
| `agentio.trafficExtension.image`             | Traffic-extension image settings              | `docker.io/openkruise/traffic-extension:latest`                                                                                                                |
| `agentio.egressGateway.gateways`             | Statically provisioned Agentio egress gateways | `[]`                                                                                                                                                          |
| `agentio.agentioConfig`                      | Raw overrides for the Agentio configuration   | `{}`                                                                                                                                                          |

The sandbox-manager integration intentionally excludes Agentio ambient mode and
the Agentio sidecar injector. Kruise Agents injects the per-sandbox
`traffic-proxy` from the `sandbox-injection-config` ConfigMap installed by the
sandbox-controller chart.

Specify each parameter using the `--set key=value[,key=value]` argument. For example:

```bash
helm install agents-sandbox-manager . -n <namespace> openkruise/kruise-agents-sandbox-manager \
  --set e2b.adminApiKey=<your-admin-api-key> \
  --set ingress.className=<alb|nginx> \
  --set key=value...
```
